--- a/application.yml
+++ b/application.yml
@@ -1,4 +1,4 @@
 my:
- greeting: Welcome to Great Learning
+ greeting: Welcome to Spring Cloud Configuration Management
  list:
   values: apple,banana,mango
