--- a/application.yml
+++ b/application.yml
@@ -1,4 +1,4 @@
 my:
- greeting: Welcome to Spring Cloud Configuration
+ greeting: Welcome to Spring Cloud Configuration management
  list:
   values: apple,banana,mango
